--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -27,8 +27,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 96.0.4664\n",
       "Get LATEST chromedriver version for 96.0.4664 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/96.0.4664.45/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\Ryan\\.wdm\\drivers\\chromedriver\\win32\\96.0.4664.45]\n"
+      "Driver [C:\\Users\\Ryan\\.wdm\\drivers\\chromedriver\\win32\\96.0.4664.45\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -91,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Mars 2020 Heads Into the Test Chamber</div>"
+       "<div class=\"content_title\">NASA Administrator Statement on Moon to Mars Initiative, FY 2021 Budget</div>"
       ]
      },
      "execution_count": 5,
@@ -111,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's Mars 2020 Heads Into the Test Chamber\""
+       "'NASA Administrator Statement on Moon to Mars Initiative, FY 2021 Budget'"
       ]
      },
      "execution_count": 6,
@@ -133,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "'In this time-lapse video taken at JPL, engineers move the Mars 2020 rover into a large vacuum chamber for testing in Mars-like environmental conditions.'"
+       "\"Jim Bridenstine addresses NASA's ambitious plans for the coming years, including Mars Sample Return.\""
       ]
      },
      "execution_count": 7,
@@ -194,7 +193,7 @@
        "<link href=\"css/app.css\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<title>Space Image</title>\n",
-       "<style type=\"text/css\">.fancybox-margin{margin-right:0px;}</style></head>\n",
+       "<style type=\"text/css\">.fancybox-margin{margin-right:17px;}</style></head>\n",
        "<body>\n",
        "<div class=\"header\">\n",
        "<nav class=\"navbar navbar-expand-lg\">\n",
@@ -215,9 +214,9 @@
        "<h2 class=\"brand_title\">FEATURED IMAGE</h2>\n",
        "<h1 class=\"media_feature_title\">Dusty Space Cloud</h1>\n",
        "<br/>\n",
-       "<a class=\"showimg fancybox-thumbs\" href=\"image/featured/mars3.jpg\" target=\"_blank\"> <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>\n",
+       "<a class=\"showimg fancybox-thumbs\" href=\"image/featured/mars2.jpg\" target=\"_blank\"> <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>\n",
        "</div>\n",
-       "<img class=\"headerimage fade-in\" src=\"image/featured/mars3.jpg\"/></div>\n",
+       "<img class=\"headerimage fade-in\" src=\"image/featured/mars2.jpg\"/></div>\n",
        "<div class=\"search sticky\">\n",
        "<div class=\"col-md-12\">\n",
        "<div class=\"row\">\n",
@@ -389,7 +388,7 @@
        "<link href=\"js/fancyBox/jquery.fancybox.css?v=2.1.5\" media=\"screen\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"js/fancyBox/helpers/jquery.fancybox-thumbs.css?v=1.0.7\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<script src=\"js/fancyBox/helpers/jquery.fancybox-thumbs.js?v=1.0.7\" type=\"text/javascript\"></script>\n",
-       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 110px; left: 65px; opacity: 0.100036; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div></div></div></div></body></html>"
+       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 249px; left: 121px; opacity: 0.100568; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars2.jpg\"/></div></div></div></div></div></body></html>"
       ]
      },
      "execution_count": 10,
@@ -412,7 +411,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 11,
@@ -434,7 +433,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 12,
@@ -674,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +733,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
